LIST OF CHANGES FOR NPG-QC PACKAGE

release 57.8.1
 - add temporary file name option to bamtofastq command

release 57.8
 - Using bower to manage javascript component dependencies.
 - Using bcviz v1.1.0 which now supports bower.
 - use Biobambam bamtofastq in place of Picard utility in adapter qc check

release 57.7
 - removed redundant methods from NpgDB model
 - New javascript functionality to process mqc. MQC outcomes are changed using AJAX 
   calls to the controller directly.
 - mqc controller now provides with the functionality for mqc through asynchronous calls.
 - mqc controller does not saves a log in the tracking database when mqc outcomes are
   updated.

release 57.6
 - Added mqc_outcome_reporter
 - Added a new column to the mqc entity and historic table to keep separate track of who
    updates the record through the web page and who was the last user to modify the row.
    Updates to tests to deal with the new schema.
 - MqcOutcomeEnt validates outcomes are final before updating them as reported.

release 57.5
 - amend location of composite genotype data (composite_results_loc) in npg_qc_viewer.conf

release 57.4
 - in order to be able to retrieve values of foreign keys without
     fetching the row in the parent table, DBIx classes generated with
     an option to drop id_ at the start of the relation name
 - InflateColumn::Serializer component added selectively to autoqc classes
     rather than to all classes
 - mqc models (DBIx) functionality extended to create a method for
   updating/creating outcomes
 - column name fixed in the mqc_outcome_hist table
 - SeqQC viewer: top horizontal menu removed, Help link added to the menu on the right
 - SeqQC viewer: NPG links point to correct production/dev servers
 - SeqQC viewer: superfluous javascript code removed
 - SeqQC viewer: checks/runs page removed
 - SeqQC viewer: links to individual entities on the right removed