@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - following restructuring of bcviz, amend statements for import of bcviz libraries
+
 release 57.8.1
  - add temporary file name option to bamtofastq command
 
